--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-GROUP=app.cash.bittycity
-VERSION_NAME=0.1.0
+GROUP=xyz.block.bittycity
+VERSION_NAME=0.0.1
 
 POM_URL=https://github.com/block/bitty-city/
 POM_SCM_URL=https://github.com/block/bitty-city/
@@ -8,8 +8,8 @@ POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/block/bitty-city.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=cashapp
-POM_DEVELOPER_NAME=Cash App
+POM_DEVELOPER_ID=block
+POM_DEVELOPER_NAME=Block
 
 SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
