Update configuration to allow releasing modules independently

--- a/common/gradle.properties
+++ b/common/gradle.properties
@@ -1,3 +1,5 @@
+VERSION_NAME=0.0.4
+
 POM_ARTIFACT_ID=common
 POM_NAME=Bitty City - Common
 POM_DESCRIPTION=Module with common functionality used in the Bitcoin experience products
