--- a/outie-jooq-provider/gradle.properties
+++ b/outie-jooq-provider/gradle.properties
@@ -1,3 +1,5 @@
+VERSION_NAME=0.0.4
+
 POM_ARTIFACT_ID=outie-jooq-provider
 POM_NAME=Bitty City - Outie Jooq Provider
 POM_DESCRIPTION=Jooq implementation for Bitcoin withdrawals product experience engine
