--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,10 @@ name: Publish to Maven Central
 on:
   push:
     tags:
-      - 'v*'
+      - 'common-v*'
+      - 'innie-v*'
+      - 'outie-v*'
+      - 'outie-jooq-provider-v*'
 
 permissions:
   contents: read
@@ -36,10 +39,15 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Extract version from tag
+      - name: Extract module and version from tag
         if: steps.check-branch.outputs.tag_on_main == 'true'
-        id: version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        id: parse-tag
+        run: |
+          TAG="${GITHUB_REF#refs/tags/}"
+          MODULE="${TAG%-v*}"
+          VERSION="${TAG#*-v}"
+          echo "module=$MODULE" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Publish to Maven Central
         if: steps.check-branch.outputs.tag_on_main == 'true'
@@ -48,5 +56,5 @@ jobs:
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_CENTRAL_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SECRET_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_SECRET_PASSPHRASE }}
-          ORG_GRADLE_PROJECT_VERSION_NAME: ${{ steps.version.outputs.version }}
-        run: bin/gradle publishToMavenCentral
+          ORG_GRADLE_PROJECT_VERSION_NAME: ${{ steps.parse-tag.outputs.version }}
+        run: bin/gradle :${{ steps.parse-tag.outputs.module }}:publishToMavenCentral
