--- a/innie/gradle.properties
+++ b/innie/gradle.properties
@@ -1,3 +1,5 @@
+VERSION_NAME=0.0.4
+
 POM_ARTIFACT_ID=innie
 POM_NAME=Bitty City - Innie
 POM_DESCRIPTION=Bitcoin deposits product experience engine
