--- a/outie/gradle.properties
+++ b/outie/gradle.properties
@@ -1,3 +1,5 @@
+VERSION_NAME=0.0.4
+
 POM_ARTIFACT_ID=outie
 POM_NAME=Bitty City - Outie
 POM_DESCRIPTION=Bitcoin withdrawals product experience engine
