--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,21 @@
 [versions]
 arrow = "2.2.1"
 bitcoinj = "0.17"
-domainApi = "0.4.0"
+domainApi = "0.5.3"
+domainApiKfsm = "0.5.3"
+domainApiKfsmv2 = "0.1.0"
 guice = "7.0.0"
 jodaMoney = "1.0.7"
 kfsm = "0.12.0"
+kfsmv2 = "2.0.0"
 kotest = "5.9.1"
+kotlinxCoroutines = "1.10.2"
 kotestArrow = "2.0.0"
 # @pin
 kotlin = "2.2.21"
 kotlinBinaryCompatibilityPlugin = "0.18.1"
 kotlinLogging = "7.0.14"
-mavenPublish = "0.36.0"
+mavenPublish = "0.35.0"
 mockk = "1.14.7"
 moshi = "1.15.2"
 quiver = "1.0.3"
@@ -24,11 +28,14 @@ versionsGradlePlugin = "0.53.0"
 arrowCore = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 bitcoinj = { module = "org.bitcoinj:bitcoinj-core", version.ref = "bitcoinj" }
 domainApi = { module = "xyz.block.domainapi:domain-api", version.ref = "domainApi" }
+domainApiKfsm = { module = "xyz.block.domainapi:domain-api-kfsm", version.ref = "domainApiKfsm" }
+domainApiKfsmv2 = { module = "xyz.block.domainapi:domain-api-kfsm-v2", version.ref = "domainApiKfsmv2" }
 guice = { module = "com.google.inject:guice", version.ref = "guice" }
 guiceAssistedInject = { module = "com.google.inject.extensions:guice-assistedinject", version.ref = "guice" }
 jodaMoney = { module = "org.joda:joda-money", version.ref = "jodaMoney" }
 junitJupiter = { module = "org.junit.jupiter:junit-jupiter", version = "5.14.2" }
 kfsm = { module = "app.cash.kfsm:kfsm", version.ref = "kfsm" }
+kfsmv2 = { module = "app.cash.kfsm:kfsm-v2", version.ref = "kfsmv2" }
 kotestAssertions = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 kotestAssertionsArrow = { module = "io.kotest.extensions:kotest-assertions-arrow", version.ref = "kotestArrow" }
 kotestAssertionsArrowJvm = { module = "io.kotest.extensions:kotest-assertions-arrow-jvm", version.ref = "kotestArrow" }
@@ -36,6 +43,7 @@ kotestJunitRunnerJvm = { module = "io.kotest:kotest-runner-junit5-jvm", version.
 kotestProperty = { module = "io.kotest:kotest-property", version.ref = "kotest" }
 kotlinLogging = { module = "io.github.oshai:kotlin-logging", version.ref = "kotlinLogging" }
 kotlinReflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
+kotlinxCoroutinesCore = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 mavenPublishGradlePlugin = { module = "com.vanniktech:gradle-maven-publish-plugin", version.ref = "mavenPublish" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
